# imdb-mlp

./: NLP_01.docx  NLP_Tutorial2_and_HW_Mali (1).ipynb  README.md  hello.py  pyproject.toml  test_gpu.py
experiments/: experiment_20250220_132038.json  experiment_20250220_132058.json  experiment_20250220_132117.json  experiment_20250220_132216.json  experiment_20250220_132315.json  experiment_20250220_132413.json  experiment_20250220_132512.json  experiment_20250220_132610.json  experiment_20250220_132709.json  experiment_20250220_132807.json  experiment_20250220_132906.json  experiment_20250220_133004.json  experiment_20250220_133103.json  experiment_20250220_133202.json  experiment_20250220_133300.json  experiment_20250220_133359.json  experiment_20250220_133458.json  experiment_20250220_133556.json  experiment_20250220_133655.json  experiment_20250220_133753.json  experiment_20250220_133852.json  experiment_20250220_133950.json  experiment_20250220_134049.json  experiment_20250220_134147.json  experiment_20250220_134246.json  experiment_20250220_134345.json  experiment_20250220_134443.json  experiment_20250220_134542.json  experiment_20250220_134640.json  experiment_20250220_134738.json  experiment_20250220_135153.json  experiment_20250220_135407.json  experiment_20250220_135622.json  experiment_20250220_135814.json  experiment_20250220_140001.json  experiment_20250220_140149.json  experiment_20250220_140336.json  experiment_20250220_140523.json  experiment_20250220_140715.json  experiment_20250220_140902.json  (+20 more)
reports/: best_model_results.csv  best_model_stats.csv  (+7 more)
(+9 files in other folders)
